[package]
name = "aqicn"
version = "0.1.0"
authors = ["OriginCode <self@origincode.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
reqwest = { version = "0.10", features = ["json", "blocking"] }
anyhow = "1.0"

[profile.release]
lto = true
